# aoc22

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/solutions/day01/: day01.h
solutions/day01/: day01.h
solutions/day02/: day02.h
solutions/day03/: day03.h
solutions/day04/: day04.h
solutions/day05/: day05.h
solutions/day06/: day06.h
solutions/day07/: day07.cpp  day07.h
solutions/day08/: day08.h
solutions/day09/: Head.cpp  Head.h  Tail.cpp  Tail.h  day09.h  defs.h
solutions/day10/: AddX.cpp  AddX.h  Instruction.h  Noop.cpp  Noop.h  day10.h
solutions/day11/: BigInt.cpp  BigInt.h  Monkey.cpp  Monkey.h  day11.h
solutions/day12/: Coord.cpp  Coord.h  Map.cpp  Map.h  Node.cpp  Node.h  Pathfinder.cpp  Pathfinder.h  day12.h
solutions/day13/: List.cpp  List.h  Number.cpp  Number.h  Parser.h  Types.h  Value.cpp  Value.h  day13.h
solutions/template/: template.h
